--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+*.xml
+*.iml
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -255,8 +257,8 @@ cython_debug/
 
 /.idea/parseAvito.iml
 /.idea/.gitignore
-/idea/misc.xml
-/idea/Python_learn.iml
+/.idea/misc.xml
+/.idea/Python_learn.iml
 /.idea/modules.xml
 /.idea/inspectionProfiles/profiles_settings.xml
 /.idea/vcs.xml
