--- a/currency.yaml
+++ b/currency.yaml
@@ -1,13 +1,12 @@
-!!python/tuple
-- EURGBP
-- EURJPY
-- EURRUB
-- EURUSD
-- GBPJPY
-- GBPRUB
-- JPYRUB
-- USDGBP
-- USDJPY
-- USDRUB
-- BTCRUB
-- BTCUSD
+BTCRUB: BTCRUB
+BTCUSD: BTCUSD
+EURGBP: EURGBP
+EURJPY: EURJPY
+EURRUB: EURRUB
+EURUSD: EURUSD
+GBPJPY: GBPJPY
+GBPRUB: GBPRUB
+JPYRUB: JPYRUB
+USDGBP: USDGBP
+USDJPY: USDJPY
+USDRUB: USDRUB
